2002-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (type): Set the ImageInfo type attribute when
 	setting the image type.  If the type attribute is set to something
 	other than UndefinedType (implying that the user has set a desired
 	output image type), then return that as the image type, otherwise
 	use GetImageType() to evaluate the image type.

2002-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableTextUnderColor): New class to set the
 	text undercolor.  When text undercolor is set, a rectangle of the
 	specified color is rendered under text annotations.

2002-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++ library no longer depends on iostreams at all.

2002-04-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (throwImageException): ExceptionInfo was not being
 	properly initialized.  This could cause some errors to cause an
 	abort in error.c rather than throwing an exception.

2002-04-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (draw): Use draw.h drawing APIs to draw on image.
  	This means that MVG output no longer comes from code in
 	Drawable.cpp.

2002-04-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/STL.cpp: Moved function object implementations from STL.h to
 	STL.cpp.

2002-04-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (getConstPixels): Changed offset parameter type
 	from 'unsigned int' to 'int'.
	(getPixels): Changed offset parameter type from 'unsigned int' to
 	'int'.
	(setPixels): Changed offset parameter type from 'unsigned int' to
 	'int'.
	(cacheThreshold): Changed argument type from 'const long' to
 	'const int'.
	(matteFloodfill): Changed offset parameter type from 'const long' to
 	'const int'.

	* lib/Pixels.cpp (getConst): New method to return read-only pixels.
	(get): Offset parameter types changed from 'unsigned int' to 'int'.
